--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,15 @@ rvm:
  - "2.2.0"
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
+
+before_script:
+  - cp config/database.yml.travis config/database.yml
+  - psql -c 'create database pubs_portal_test;' -U postgres
+
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
+
+notifications:
+  slack: joypactdev:ZDiuFI4GDQJ0KQzTgJljV29y
