code climate integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,7 @@ script:
 
 notifications:
   slack: joypactdev:ZDiuFI4GDQJ0KQzTgJljV29y
+
+addons:
+	code_climate:
+  	repo_token: aad05fcc6ef8058d98f13c2afb310fed2ec4c92ef6afe289dc6319557a9761b7
