--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ notifications:
 addons:
   code_climate:
     repo_token: aad05fcc6ef8058d98f13c2afb310fed2ec4c92ef6afe289dc6319557a9761b7
+  sauce_connect:
+    username: "davidwosk1"
+    access_key: "0760394d-b006-4432-a9da-fabc6854f154"
