--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ rvm:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -c 'create database pubs_portal_test;' -U postgres
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
@@ -18,10 +21,10 @@ notifications:
 
 addons:
   code_climate:
-    repo_token: aad05fcc6ef8058d98f13c2afb310fed2ec4c92ef6afe289dc6319557a9761b7
-  sauce_connect:
-    username: "davidwosk1"
-    access_key: "0760394d-b006-4432-a9da-fabc6854f154"
+    repo_token: e49d3aa9c51decadae274fde90b6e34d14082c575af18109752339ed38ac6bae
+  # sauce_connect:
+  #   username: "davidwosk1"
+  #   access_key: "0760394d-b006-4432-a9da-fabc6854f154"
 
-env:
- - USE_SAUCE_LABS=true
+# env:
+#  - USE_SAUCE_LABS=true
