--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,11 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-  - screen ruby -S bundle exec rails s  # start a Web server
-  - sleep 3 # give Web server some time to bind to sockets, etc
 
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rake db:test:prepare
-  - bundle exec rake
+  - xvfb-run bundle exec rake
 
 notifications:
   slack: joypactdev:ZDiuFI4GDQJ0KQzTgJljV29y
