--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+  - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
+  - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
 
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
