--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
-  - "java -jar selenium-server-standalone-2.43.1.jar -Dwebdriver.firefox.profile=default > /dev/null &"
+  - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
 
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
