--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - psql -c 'create database pubs_portal_test;' -U postgres
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "xwud -in /var/tmp/Xvfb_screen0"
   - sleep 3 # give xvfb some time to start
   - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
   - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
