--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ notifications:
 addons:
   code_climate:
     repo_token: e49d3aa9c51decadae274fde90b6e34d14082c575af18109752339ed38ac6bae
-  # sauce_connect:
-  #   username: "davidwosk1"
-  #   access_key: "0760394d-b006-4432-a9da-fabc6854f154"
+  sauce_connect:
+    username: "davidwosk1"
+    access_key: "0760394d-b006-4432-a9da-fabc6854f154"
 
-# env:
-#  - USE_SAUCE_LABS=true
+env:
+ - USE_SAUCE_LABS=true
