--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -c 'create database pubs_portal_test;' -U postgres
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  # - "export DISPLAY=:99.0"
+  # - "sh -e /etc/init.d/xvfb start"
+  - sleep 5
   # - sleep 3 # give xvfb some time to start
   # - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
   # - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
@@ -27,5 +28,7 @@ notifications:
 addons:
   code_climate:
     repo_token: e49d3aa9c51decadae274fde90b6e34d14082c575af18109752339ed38ac6bae
-  firefox: latest
+
+env:
+  - TRAVIS=true
 
