--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ before_install:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -c 'create database pubs_portal_test;' -U postgres
-  # - "export DISPLAY=:99.0"
-  # - "sh -e /etc/init.d/xvfb start"
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - sleep 5
+  - rails server
   # - sleep 3 # give xvfb some time to start
   # - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
   # - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
