--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - sleep 5
   - echo $PATH
   - ruby -S bundle exec rails server -d
+  - sleep 10
   # - sleep 3 # give xvfb some time to start
   # - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
   # - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
