--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ before_install:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -c 'create database pubs_portal_test;' -U postgres
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 5
-  - echo $PATH
-  - ruby -S bundle exec rails server -d
-  - sleep 10
+  # - "export DISPLAY=:99.0"
+  # - "sh -e /etc/init.d/xvfb start"
+  # - sleep 5
+  # - echo $PATH
+  # - ruby -S bundle exec rails server -d
+  # - sleep 10
   # - sleep 3 # give xvfb some time to start
   # - "wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
   # - "java -jar selenium-server-standalone-2.43.1.jar > /dev/null &"
@@ -23,7 +23,7 @@ before_script:
 script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rake db:test:prepare
-  - bundle exec rake
+  # - bundle exec rake
 
 notifications:
   slack: joypactdev:ZDiuFI4GDQJ0KQzTgJljV29y
