--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rake db:test:prepare
   # - bundle exec rake
+  - rspec
 
 notifications:
   slack: joypactdev:ZDiuFI4GDQJ0KQzTgJljV29y
